--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,14 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+jboss-web.xml
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+# User-specific stuff:
+.idea/
+target
+
+# Package Files #
+target*.~
